# sobel_ocl

./: CMakeLists.txt  README.md  main.cpp  sobel.cl
